--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -240,6 +240,9 @@
               <p style="text-align:center;font-size:small;">
                 Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
               </p>
+              <p style="text-align:center;font-size:small;">
+                Further updated design and source code from <a style="font-size:small;" href="https://leonidk.com/">Jon Barron's website</a>
+              </p>
             </td>
           </tr>
         </table>
