--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
         <br>
         <br>
         <br>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+<!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Intel Projects</h2>
@@ -231,7 +231,7 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
-        </table>
+        </table> -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
@@ -241,7 +241,7 @@
                 Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
               </p>
               <p style="text-align:center;font-size:small;">
-                Further updated design and source code from <a style="font-size:small;" href="https://leonidk.com/">Jon Barron's website</a>
+                Further updated design and source code from <a style="font-size:small;" href="https://leonidk.com/">Leonid Keselman's website</a>
               </p>
             </td>
           </tr>
