--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,12 @@
               <h1>
                 Christopher Hsu
               </h1>
-              <p>I am a PhD student at the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, part of the <a href="https://www.scs.cmu.edu/">School of Computer Science</a> at <a href="https://www.cmu.edu/">Carnegie Mellon University</a>, where I work on 3D computer vision. My PhD advisor is <a href="http://www.cs.cmu.edu/~hebert/">Martial Hebert</a>.
+              <p>I am a PhD student in the <a href="https://www.ese.upenn.edu/">Electrical and Systems Engineering</a> department and the <a href="https://www.grasp.upenn.edu/">GRASP</a> Robotics Laboratory at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I work on multi-robot systems. My PhD advisor is <a href="https://pratikac.github.io/">Pratik Chaudhari</a>, Assistant Professor in ESE with a secondary appointment in CIS.
               </p>
               <p>
-                From 2011 to 2017, I worked at <a href="https://www.intel.com">Intel</a>, as part of <a href="https://www.intelrealsense.com/">Intel RealSense</a>. I primarily designed computer vision algorithms for efficient hardware ASICs, including the Intel RealSense <a href="https://software.intel.com/en-us/articles/realsense-r200-camera">R200</a> and <a href="https://software.intel.com/en-us/realsense/d400">D400</a> RGB-D sensors. Additionally, I worked on <a href="https://github.com/IntelRealSense/librealsense">software APIs</a>, <a href="https://patents.google.com/patent/US9992474B2">active illumination systems</a>, <a href="https://patents.google.com/patent/US9304597">human-computer interaction devices</a>, and helped develop demos for trade shows, including CES 2012-2016.
-              </p>
+                Currently, I am also a Civilian Research Engineer at <a href="https://www.arl.army.mil/">DEVCOM Army Research Laboratory</a> where our mission is to operationalize science for tranformational overmatch. 
               <p>
-                I have an MS in Computer Science (AI focus) from <a href="http://cs.stanford.edu">Stanford University</a>, where I was a research assistant for <a href="http://svl.stanford.edu/">Silvio Savarese</a> and a teaching assistant for <a href="http://svl.stanford.edu/">Fei-Fei Li</a> (<a href="http://vision.stanford.edu/teaching/cs131_fall1617/">CS131</a> & <a href="http://cs231n.stanford.edu/2017/">CS231N</a>). I have a BS in EECS from <a href="http://www.eecs.berkeley.edu/">UC Berkeley</a>, where I worked in <a href="https://people.eecs.berkeley.edu/~pister/">Kris Pister's</a> lab.
+                As a <a href="https://www.smartscholarship.org/smart">DoD SMART Scholar</a>, I received a MSE in Robotics from the <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/">University of Pennsylvania</a>, where I was advised by <a href="https://www.georgejpappas.org/">George J. Pappas</a> and <a href="https://pratikac.github.io/">Pratik Chaudhari</a>. I have a BS in Mechanical Engineering from <a href="https://www1.villanova.edu/university/engineering.html">Villanova University</a>, where I worked in <a href="https://www1.villanova.edu/university/engineering/about-us/faculty-staff-directory/biodetail.html?mail=c.nataraj@villanova.edu&xsl=bio_long">C. Nataraj's</a> <a href="http://vcads.org/vcads/">Villanova Center for Analytics of Dynamic Systems (VCADS)</a>.
               </p>
               <p style="text-align:center">
                 <!-- <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp; -->
@@ -53,7 +52,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm interested in computer vision, machine learning, optimization, graphics and robotics.
+                I'm interested in multi-robot systems, reinforcement learning, planning, controls, and bio-inspired systems.
               </p>
             </td>
           </tr>
