--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:60%;vertical-align:middle">
               <h1>
-                Christopher Hsu
+                Christopher D. Hsu
               </h1>
               <p>I am a PhD student in the <a href="https://www.ese.upenn.edu/">Electrical and Systems Engineering</a> department and the <a href="https://www.grasp.upenn.edu/">GRASP</a> Robotics Laboratory at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I work on multi-robot systems. My PhD advisor is <a href="https://pratikac.github.io/">Pratik Chaudhari</a>, Assistant Professor in ESE with a secondary appointment in CIS.
               </p>
@@ -52,7 +52,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm interested in multi-robot systems, reinforcement learning, planning, controls, and bio-inspired systems.
+                I am interested in multi-robot systems, reinforcement learning, planning, controls, and bio-inspired systems.
               </p>
             </td>
           </tr>
