--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,13 @@
                 As a <a href="https://www.smartscholarship.org/smart">DoD SMART Scholar</a>, I received a MSE in Robotics from the <a href="https://www.grasp.upenn.edu/academics/masters-degree-program/">University of Pennsylvania</a>, where I was advised by <a href="https://www.georgejpappas.org/">George J. Pappas</a> and <a href="https://pratikac.github.io/">Pratik Chaudhari</a>. I have a BS in Mechanical Engineering from <a href="https://www1.villanova.edu/university/engineering.html">Villanova University</a>, where I worked with <a href="https://www1.villanova.edu/university/engineering/about-us/faculty-staff-directory/biodetail.html?mail=c.nataraj@villanova.edu&xsl=bio_long">C. Nataraj</a> in the <a href="http://vcads.org/vcads/">Villanova Center for Analytics of Dynamic Systems (VCADS)</a>.
               </p>
               <p style="text-align:center">
-                <!-- <a target="_blank" href="https://mailhide.io/e/B8TyS"> Email</a> &nbsp;/&nbsp; -->
                 <a href="https://github.com/christopher-hsu">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=Qyk0paAAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/hsuchristopher/"> LinkedIn </a>
+                <!-- <a href="https://twitter.com/Chris_Hsu_?s=20&t=u_-XfkEBFWDxt12N_8wEgA"> Twitter </a> -->
+              </p>
+              <p style="text-align:center">
+                chsu8 at seas dot upenn dot edu
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
