--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/IMG_0491.jpg">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/headshots_041423.jpeg">
             </td>
           </tr>
         </table>
