--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
               <h1>
                 Christopher D. Hsu
               </h1>
-              <p>I am a PhD student in the <a href="https://www.ese.upenn.edu/">Electrical and Systems Engineering</a> department and the <a href="https://www.grasp.upenn.edu/">GRASP</a> Robotics Laboratory at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I work on multi-robot systems. My PhD advisor is <a href="https://pratikac.github.io/">Pratik Chaudhari</a>, Assistant Professor at Penn in ESE with a secondary appointment in CIS.
+              <p>I am a PhD student in the <a href="https://www.ese.upenn.edu/">Electrical and Systems Engineering</a> department and the <a href="https://www.grasp.upenn.edu/">GRASP</a> Robotics Laboratory at the <a href="https://www.upenn.edu/">University of Pennsylvania</a>, where I work on Spatial AI for Robotics. My PhD advisor is <a href="https://pratikac.github.io/">Pratik Chaudhari</a>, Assistant Professor at Penn in ESE with a secondary appointment in CIS.
               </p>
               <p>
                 Currently, I am also a Civilian Research Engineer at <a href="https://www.arl.army.mil/">DEVCOM Army Research Laboratory</a> where our mission is to operationalize science for tranformational overmatch. 
@@ -55,7 +55,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I am interested in multi-robot systems, reinforcement learning, planning, controls, and bio-inspired systems.
+                I am interested in Spatial AI, simulation, multi-robot systems, reinforcement learning, planning, controls, and robotics.
               </p>
             </td>
           </tr>
