--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,9 @@
               <p>
                 I am interested in Spatial AI, simulation, multi-robot systems, reinforcement learning, planning, controls, and robotics.
               </p>
+              <p>
+                I am also the head of the GRASP SFI Seminar Series committee where we host weekly in-person seminars. See the <a href="https://www.youtube.com/@grasplab/videos">GRASP Youtube Page</a> for past recordings.
+              </p>
             </td>
           </tr>
         </table>
